[package]
name = "hecs"
version = "0.10.3"
description = "A fast, minimal, and ergonomic entity-component-system library"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ralith/hecs"
readme = "README.md"
keywords = ["ecs", "entity"]
categories = ["data-structures", "game-engines", "no-std"]
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = []
# Enables derive(Bundle) and derive(Query)
macros = ["hecs-macros"]
# Enables the serialize::column module
column-serialize = ["serde"]
# Enables the serialize::row module
row-serialize = ["serde"]

[dependencies]
hecs-macros = { path = "macros", optional = true }
hashbrown = { path = "../hashbrown", default-features = false, features = ["ahash", "inline-more"] }
serde = { version = "1", default-features = false, optional = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }

[dev-dependencies]
bencher = "0.1"
rand = { path = "../rand" }
trybuild = "1"
serde = { version = "1", features = ["derive"] }
serde_test = "1"

[[bench]]
name = "bench"
harness = false
required-features = ["macros"]

[profile.release]
debug = true

[workspace]
members = ["macros", "tests/no-std-test-crates/macros"]
